Fix layout issue, all html and css

--- a/static/style.css
+++ b/static/style.css
@@ -81,33 +81,3 @@ body {
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
 }
-
-/* File input */
-.custom-file-input::-webkit-file-upload-button {
-    visibility: hidden;
-}
-
-.custom-file-input::before {
-    content: 'Select image';
-    height: 2rem;
-    display: inline-block;
-    background: linear-gradient(top, #f9f9f9, #e3e3e3);
-    border: 1px solid #000;
-    border-radius: 5px;
-    padding: 6px 12px;
-    outline: none;
-    white-space: nowrap;
-    -webkit-user-select: none;
-    cursor: pointer;
-    text-shadow: 1px 1px #fff;
-    font-weight: 700;
-    font-size: 0.8rem;
-}
-
-.custom-file-input:hover::before {
-    border-color: black;
-}
-
-.custom-file-input:active::before {
-    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
-}
